kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-sandbox
  labels:
    app.kubernetes.io/name: api-sandbox
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: api-sandbox
